--- a/glorify/index.html
+++ b/glorify/index.html
@@ -1620,7 +1620,9 @@
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
-                <p class="specialTextNote colorGLORIFYBlue u-textCenter">Outline the fundamental steps for the two concepts. One focuses on facilitating a Bible study session, and the other addresses the organization of a group prayer session.
+                <p class="specialTextNote colorGLORIFYBlue u-textCenter">Outline the fundamental steps for the two
+                  concepts. One focuses on facilitating a Bible study session, and the other addresses the organization
+                  of a group prayer session.
                 </p>
               </div>
             </div>
@@ -1646,40 +1648,119 @@
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-
                 <h2 class="centerVer">
                   <img class="iconS" src="IconTest.svg" alt="Design">
-
                   <span class="colorGLORIFYOrange">Concept Test &#124; Feedback session script</span>
-
                 </h2>
               </div>
             </div>
           </div>
+          <div class="element">
+            <h3 class="accordion accordionBorderTop noMargin withBg"><strong>Concept test plan</strong>
+            </h3>
+            <div class="accordion-content">
+              <div class="blankHXS"></div>
+              <div class="Grid Grid--gutters Grid--cols-3">
 
-          <div class="Grid Grid--gutters Grid--cols-2">
-            <div class="Grid-cell">
-              <div class="element">
-                <h4> <strong>Research Goal</strong> </h4>
-                <p>Gather feedback to understand users' initial impressions of the concepts.
-                </p>
+                <div class="Grid-cell">
+                  <h4> <strong> Objective: </strong> </h4>
+                  <p>To evaluate the viability and user interest in two new features:</p>
+                  <ul>
+                    <li>Facilitating a Bible Study Session</li>
+                    <li>Facilitating a Group Prayer Session.</li>
+                  </ul>
+                </div>
+                <div class="Grid-cell">
+                  <h4> <strong> Method </strong> </h4>
+                  <p>Moderated tests</p>
+                </div>
+                <div class="Grid-cell">
+                  <h4> <strong> Number of Participants: </strong> </h4>
+                  <P>3</P>
+                </div>
               </div>
+              <div class="blankHXS"></div>
             </div>
+
+            <h3 class="accordion accordionBorderBottom noMargin withBg"><strong>Tasks of concept A &#38; B</strong></h3>
+
+            <div class="accordion-content">
+              <div class="blankHXS"></div>
+              <div class="Grid Grid--gutters Grid--cols-2">
+                <div class="Grid-cell">
+                  <h3> <strong> Concept A - Facilitating a Bible Study Session </strong> </h3>
+                  <h4> <strong> Tasks for Participants:</strong> </h4>
+                  <ul>
+                    <li class="listCircle">Create a group prayer room</li>
+                    <li class="listCircle"> <span class="textDecor GLORIFY">Discover a group prayer</span> that align
+                      with their interests </li>
+                    <li class="listCircle">Find a suitable group prayer to participate in </li>
+                    <li class="listCircle"><span class="textDecor GLORIFY">Engage in prayer</span> with other
+                      fellowships within the room </li>
+                    <li class="listCircle"><span class="textDecor GLORIFY">Foster connections with other
+                        fellowships</span> after the group prayer session
+                    </li>
+
+                  </ul>
+
+                </div>
+                <div class="Grid-cell">
+                  <h3> <strong> Concept B - Facilitating a Group Prayer Session </strong> </h3>
+
+                  <h4> <strong> Tasks for Participants:</strong> </h4>
+                  <ul>
+                    <li class="listCircle">Create a Bible study room</li>
+                    <li class="listCircle"> <span class="textDecor GLORIFY">Discover topics</span> that align with their
+                      interests</li>
+                    <li class="listCircle">Find a Bible study session to join</li>
+                    <li class="listCircle"><span class="textDecor GLORIFY">Engage in discussions</span> with other
+                      fellowships within the room</li>
+                    <li class="listCircle"><span class="textDecor GLORIFY">Foster connections with other
+                        fellowships</span> after the Bible study session</li>
+
+                  </ul>
+
+                </div>
+              </div>
+              <div class="Grid Grid--gutters Grid--cols-2">
+                <div class="Grid-cell">
+                  <h4> <strong> Questions: </strong> </h4>
+                  <ul>
+                    <li class="listCircle">Did the live prayer session feel engaging and meaningful to you? </li>
+                    <li class="listCircle">On a scale of 1-10, how would you rate your overall experience with this feature?
+                    </li>
+
+                  </ul>
+                </div>
+                <div class="Grid-cell">
+                  <h4> <strong> Questions: </strong> </h4>
+                  <ul>
+                    <li class="listCircle">Was the interactive platform beneficial for your study experience? </li>
+                    <li class="listCircle">On a scale of 1-10, how would you rate your overall experience with this
+                      feature?
+                    </li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="blankHXS"></div>
+            </div>
+
+          </div>
+          <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h4> <strong>Intro</strong> </h4>
-                <p> Thanks for supporting me with this feedback session! I will present two early design concepts for
-                  a mobile app. <span class="textDecor GLORIFY"> The goal of these apps is to facilitate individuals
-                    in joining group worship, while also enabling interaction and connection with other fellowships
-                    within the Glorify app. </span> I want to gather feedback about these ideas before I move forward
-                  with the design process.</p>
+                <h2 class="centerVer">
+                  <img class="iconS" src="IconTest.svg" alt="Design">
+                  <span class="colorGLORIFYOrange">Concept Test Results </span>
+                </h2>
               </div>
             </div>
           </div>
           <div class="Grid Grid--gutters Grid--cols-2">
             <div class="Grid-cell">
               <div class="element">
-                <h4> <strong>Concept A</strong> </h4>
+                <h3> <strong> Concept A - Facilitating a Bible Study Session </strong> </h3>
 
                 <p>the first concept is adding a <span class="textDecor GLORIFY">group prayer</span> feature to the
                   existing Christian single-player app. The
@@ -1699,7 +1780,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <h4> <strong>Concept B</strong> </h4>
+                <h3> <strong> Concept B - Facilitating a Group Prayer Session </strong> </h3>
                 <p>This concept involves integrating a <span class="textDecor GLORIFY">Bible study</span> session
                   into the existing Christian single-player
                   app, aiming to <span class="textDecor GLORIFY">facilitate meaningful connections</span> among users
