--- a/glorify/index.html
+++ b/glorify/index.html
@@ -1762,11 +1762,11 @@
               <div class="element">
                 <h3> <strong> Concept A - Facilitating a Bible Study Session </strong> </h3>
 
-                <p>the first concept is adding a <span class="textDecor GLORIFY">group prayer</span> feature to the
-                  existing Christian single-player app. The
-                  goal is to help users <span class="textDecor GLORIFY">discover like-minded individuals during group
-                    prayer</span> sessions.</p>
-                <p>With the app, users can:</p>
+                <h4> <strong> Create a group prayer room </strong> </h4>
+                <h5> <strong>Participants Successful&#58; </strong>3/3 </h5>
+                <h5> <strong>Common Feedback&#58; </strong>All participants found the interface intuitive and appreciated the available topics. </h5>
+
+
                 <ul>
                   <li class="listCircle">Create a <span class="textDecor GLORIFY">group prayer room</span> </li>
                   <li class="listCircle">Discover group prayers that align with their interests </li>
