--- a/design_system/index.html
+++ b/design_system/index.html
@@ -2167,103 +2167,153 @@
             </div>
 
           </div>
-
-          <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
+          <div class="Grid Grid--gutters Grid--cols-12 u-textCenter">
             <div class="Grid-cell">
-              <div class="Grid Grid--gutters Grid--cols-4 Grid--center">
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="ClipboardBoxIconOnly">
-                      <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/in.svg" alt="LinkedIn">
-                        <p class="clickIconCopy">src="../icon/in.svg" alt="LinkedIn"</p>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="ClipboardBoxIconOnly">
-                      <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/ins.svg" alt="Instagram">
-                        <p class="clickIconCopy">src="../icon/ins.svg" alt="Instagram"</p>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="ClipboardBoxIconOnly">
-                      <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/git.svg" alt="GitHub">
-                        <p class="clickIconCopy">src="../icon/git.svg" alt="GitHub"</p>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="ClipboardBoxIconOnly">
-                      <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/Codepen.svg"
-                          alt="CodePen">
-                        <p class="clickIconCopy">src="../icon/Codepen.svg" alt="CodePen"</p>
-                      </button>
-                    </div>
-                  </div>
+              <div class="element">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly" contenteditable="true">
+                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/in.svg" alt="LinkedIn">
+                    <p class="clickIconCopy">src="../icon/in.svg" alt="LinkedIn"</p>
+                  </button>
                 </div>
               </div>
             </div>
             <div class="Grid-cell">
-              <div class="Grid Grid--gutters Grid--cols-4 Grid--center">
+              <div class="element">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly" contenteditable="true">
+                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/ins.svg" alt="Instagram">
+                    <p class="clickIconCopy">src="../icon/ins.svg" alt="Instagram"</p>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly" contenteditable="true">
+                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/git.svg" alt="GitHub">
+                    <p class="clickIconCopy">src="../icon/git.svg" alt="GitHub"</p>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly" contenteditable="true">
+                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
+                    <p class="clickIconCopy">src="../icon/Codepen.svg" alt="CodePen"</p>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly" contenteditable="true">
+                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/mail.svg" alt="Mail">
+                    <p class="clickIconCopy">src="../icon/mail.svg" alt="Mail"</p>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly" contenteditable="true">
+                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/iconFigma.svg"
+                      alt="LinkedIn">
+                    <p class="clickIconCopy">src="../icon/in.svg" alt="LinkedIn"</p>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly" contenteditable="true">
+                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/copy.svg" alt="CodePen">
+                    <p class="clickIconCopy">src="../icon/Codepen.svg" alt="CodePen"</p>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly" contenteditable="true">
+                    <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/link.svg" alt="Link">
+                    <p class="clickIconCopy">src="../icon/git.svg" alt="GitHub"</p>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
 
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="ClipboardBoxIconOnly">
-                      <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/mail.svg" alt="Mail">
-                        <p class="clickIconCopy">src="../icon/mail.svg" alt="Mail"</p>
-                      </button>
-                    </div>
-                  </div>
-                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
 
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="ClipboardBoxIconOnly">
-                      <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/iconFigma.svg"
-                          alt="LinkedIn">
-                        <p class="clickIconCopy">src="../icon/in.svg" alt="LinkedIn"</p>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="ClipboardBoxIconOnly">
-                      <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/copy.svg" alt="CodePen">
-                        <p class="clickIconCopy">src="../icon/Codepen.svg" alt="CodePen"</p>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="ClipboardBoxIconOnly">
-                      <button class="ClipboardIconOnly" contenteditable="true">
-                        <img class="iconM hoverGrey100 paddingXL borderRadiusMax" src="../icon/link.svg" alt="Link">
-                        <p class="clickIconCopy">src="../icon/git.svg" alt="GitHub"</p>
-                      </button>
-                    </div>
-                  </div>
-                </div>
               </div>
             </div>
 
           </div>
+          <div class="Grid Grid--gutters Grid--cols-12 u-textCenter">
+            <div class="Grid-cell">
+              <div class="element">
+
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+
+              </div>
+            </div>
+          </div>
+
 
 
           <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
