--- a/application_info/index.html
+++ b/application_info/index.html
@@ -211,96 +211,170 @@
 
   <div class="blankHM"></div>
   <div class="wrapper">
-
-    <div class="Grid Grid--gutters Grid--cols-3">
-
-      <div class="blankHL"></div>
-
-
-      <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank" title="LinkedIn">
-        <img class="intro-logo" src="../icon/in.svg" alt="LinkedIn">
-      </a>
-      <a href="https://github.com/vicky-wyq" target="_blank" title="GitHub">
-        <img class="intro-logo" src="../icon/git.svg" alt="GitHub">
-      </a>
-      <a href="https://codepen.io/vicky-wyq" target="_blank" title="CodePen">
-        <img class="intro-logo" src="../icon/Codepen.svg" alt="CodePen">
-      </a>
-      <a href="https://www.instagram.com/vw_yiqi/" target="_blank" title="Instagram">
-        <img class="intro-logo" src="../icon/ins.svg" alt="Instagram">
-      </a>
-    </div>
-
-
-
-    <div class="Grid Grid--gutters Grid--cols-3">
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="copiedByClickIcon">LinkedIn</div>
-        </div>
-      </div>
-    </div>
     <div class="Grid Grid--full">
       <div class="Grid-cell">
         <div class="element">
-          <div class="copied">LinkedIn</div>
+          <h1> <strong class="SkylineBlueLt">Links</strong> </h1>
         </div>
       </div>
     </div>
-
-
-    
+    <!-- Arrow -->
+    <div class="Grid Grid--full">
+      <div class="Grid-cell">
+        <div class="element">
+          <h2 class="tArrow"> Useful links <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+          </h2>
+        </div>
+      </div>
+    </div>
+    <!-- Arrow -->
     <div class="containerCopy element">
       <div class="ClickandCopy">LinkedIn</div>
       <div class="copy-text">
         <input type="text" class="text" value="https://www.linkedin.com/in/vicky-wyq/" />
-        <button class="centerHorz"> <img class="iconXS" src="../icon/copyWt.svg" alt="LinkedIn">
+        <button class="centerHorz"> <img class="iconS" src="../icon/copyWt.svg" alt="LinkedIn">
         </button>
       </div>
     </div>
 
-    <div class="blankHS"></div>
     <div class="containerCopy element">
       <div class="ClickandCopy">Website</div>
 
       <div class="copy-text">
         <input type="text" class="text" value="https://vickywang.me/" />
 
-        <button class="centerHorz"> <img class="iconXS" src="../icon/copyWt.svg" alt="LinkedIn">
+        <button class="centerHorz"> <img class="iconS" src="../icon/copyWt.svg" alt="LinkedIn">
+        </button>
+      </div>
+    </div>
+    <div class="containerCopy element">
+      <div class="ClickandCopy">Work Samples</div>
+
+      <div class="copy-text">
+        <input type="text" class="text" value="https://vickywang.me/worksamples/xiaobaobeeii/" />
+
+        <button class="centerHorz"> <img class="iconS" src="../icon/copyWt.svg" alt="LinkedIn">
+        </button>
+      </div>
+    </div>
+    <div class="containerCopy element">
+      <div class="ClickandCopy">Resume with work samples</div>
+
+      <div class="copy-text">
+        <input type="text" class="text" value="https://vickywang.me/resumeWS.pdf" />
+
+        <button class="centerHorz"> <img class="iconS" src="../icon/copyWt.svg" alt="LinkedIn">
         </button>
       </div>
     </div>
 
 
+    <div class="blankHS"></div>
+    <!-- Arrow -->
+    <div class="Grid Grid--full">
+      <div class="Grid-cell">
+        <div class="element">
+          <h2 class="tArrow"> Social Network <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+          </h2>
+        </div>
+      </div>
+    </div>
+    <!-- Arrow -->
+    <div class="Grid Grid--gutters Grid--cols-12 u-textCenter Grid--center">
 
 
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="ClipboardBoxIconOnly">
+            <button class="ClipboardIconOnly" contenteditable="true">
+              <img class="iconMax hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
+                src="../icon/in.svg">
+              <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/
+              </p>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="ClipboardBoxIconOnly">
+            <button class="ClipboardIconOnly" contenteditable="true">
+              <img class="iconMax hoverGrey100 paddingXL borderRadiusMax" title="Copy to Clipboard"
+                src="../icon/git.svg">
+              <p class="clickIconCopy">https://github.com/vicky-wyq
+              </p>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
 
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
 
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+
+        </div>
+      </div>
+
+      <div class="Grid-cell">
+        <div class="element">
+
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+
+        </div>
+      </div>
+
+    </div>
+    <div class="blankHS"></div>
 
     <div class="Grid Grid--full">
       <div class="Grid-cell">
         <div class="element">
-          <h1> <strong class="SkylineBlueLt">Information</strong> </h1>
+          <h1> <strong class="SkylineBlueLt">Text</strong> </h1>
         </div>
       </div>
     </div>
-    <div class="element">
-      <div class="ClipboardBoxIconOnly">
-        <button class="ClipboardIconOnly" contenteditable="true">
-          <img class="iconS" src="../icon/in.svg" alt="LinkedIn">
-          <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
-        </button>
+    <!-- Arrow -->
+    <div class="Grid Grid--full">
+      <div class="Grid-cell">
+        <div class="element">
+          <h2 class="tArrow"> Resume &#38; Work Samples <img class="seArrow" src="../icon/arrow-se.svg"
+              alt="icon arrow">
+          </h2>
+        </div>
       </div>
     </div>
-    <div class="element">
-      <div class="ClipboardBoxIconOnly">
-        <button class="ClipboardIconOnly" contenteditable="true">
-          <img class="iconS" src="../icon/in.svg" alt="LinkedIn">
-          <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
-        </button>
+    <!-- Arrow -->
+    <div class="Grid Grid--full">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="ClipboardBox clickTxt">
+            <button class="Clipboard clickTxt" contenteditable="true">
+              <p>Below are my resume and work samples:</p>
+              <p>Resume: https://vickywang.me/resumeWS.pdf</p>
+              <p>Portfolio: https://vickywang.me/ </p>
+              <p>Work samples: https://vickywang.me/worksamples/xiaobaobeeii/</p>
+            </button>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="blankHL"></div>
+    <div class="blankHS"></div>
 
     <!-- Arrow -->
     <div class="Grid Grid--full">
@@ -341,57 +415,23 @@
       </div>
     </div>
     <div class="blankHS"></div>
-
     <!-- Arrow -->
     <div class="Grid Grid--full">
       <div class="Grid-cell">
         <div class="element">
-          <h2 class="tArrow"> Resume and Work Samples <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+          <h2 class="tArrow"> Working Experience <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
           </h2>
         </div>
       </div>
     </div>
     <!-- Arrow -->
-    <div class="Grid Grid--full">
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="ClipboardBox clickTxt">
-            <button class="Clipboard clickTxt" contenteditable="true">
-              <p>Below are my resume and work samples:</p>
-              <p>Resume: https://vickywang.me/resumeWS.pdf</p>
-              <p>Portfolio: https://vickywang.me/ </p>
-              <p>Work samples: https://vickywang.me/worksamples/xiaobaobeeii/</p>
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="blankHS"></div>
 
-    <!-- Arrow -->
-    <div class="Grid Grid--full">
-      <div class="Grid-cell">
-        <div class="element">
-          <h2 class="tArrow"> Social network <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
-          </h2>
-        </div>
-      </div>
-    </div>
-    <!-- Arrow -->
-    <div class="Grid Grid--full">
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="ClipboardBox clickTxt">
-            <button class="Clipboard clickTxt" contenteditable="true">
-              <p>Below are my social network links:</p>
-              <p>LinkedIn:https://www.linkedin.com/in/vicky-wyq/ </p>
-              <p>Github: https://github.com/vicky-wyq </p>
-              <p>CodePen: https://codepen.io/vicky-wyq</p>
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
+
+
+    <div class="blankHL"></div>
+
+
+
 
 
 
@@ -428,7 +468,7 @@
 
     </div>
   </div>
-  <div class="blankHL"></div>
+  <div class="blankHS"></div>
 
 
 
