--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 
   <link rel="stylesheet" href="./main.css">
   <script type="text/javascript" src="scripts.js"></script>
+  <script type="text/javascript" src="scripts_project.js"></script>
+
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -504,32 +506,52 @@
     </button>
     <!--back to top-->
   </main>
-
   <!--footer-->
   <footer class="GreyBg100">
-    <div class="element">
-      <div class="footer">
-        <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
-        <div class="footer-right">
-          <a href="mailto:vickyw.design@gmail.com">
-            <img class="footer-logo" src="./icon/mail.svg" alt="email" title="Email">
-          </a>
-          <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-            <img class="footer-logo" src="./icon/in.svg" alt="LinkedIn">
-          </a>
-          <a target="_blank" href="https://github.com/vicky-wyq">
-            <img class="footer-logo" src="./icon/git.svg" alt="GitHub" title="GitHub">
-          </a>
-          <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-            <img class="footer-logo" src="./icon/Codepen.svg" alt="CodePen">
-          </a>
-          <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-            <img class="footer-logo" src="./icon/ins.svg" alt="Instagram" title="Instagram">
-          </a>
+    <div class="blankHM"></div>
+    <div class="Grid Grid--gutters Grid--cols-2 wrapper Grid--center">
+      <div class="Grid-cell">
+        <div class="element">
+          <h4> &#169; 2023 &#8212; VICKY WANG</h4>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="Grid Grid--gutters Grid--cols-8 u-textCenter Grid--center">
+          <div class="Grid-cell">
+            <div class="ClipboardBoxIconOnly">
+              <button class="ClipboardIconOnly" contenteditable="true">
+                <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="./icon/mail.svg" alt="LinkedIn">
+                <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
+              </button>
+            </div>
+          </div>
+          <div class="Grid-cell">
+            <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+              <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="./icon/in.svg" alt="LinkedIn">
+            </a>
+          </div>
+          <div class="Grid-cell">
+            <a target="_blank" href="https://github.com/vicky-wyq">
+              <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="./icon/git.svg" alt="GitHub"
+                title="GitHub">
+            </a>
+          </div>
+          <div class="Grid-cell">
+            <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+              <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
+            </a>
+          </div>
+          <div class="Grid-cell">
+            <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+              <img class="iconS hoverGrey300 paddingM borderRadiusMax" src="./icon/ins.svg" alt="Instagram"
+                title="Instagram">
+            </a>
+          </div>
         </div>
       </div>
     </div>
-  </footer>
+    <div class="blankHM"></div>
+    <div class="blankPhone"></div>
   <!--footer-->
 
 
