--- a/application_info/index.html
+++ b/application_info/index.html
@@ -395,20 +395,35 @@
           <div class="ClipboardBox clickTxt">
             <button class="Clipboard clickTxt" contenteditable="true">
               <p> Dear Hiring Manager, </p>
-              <p>My name is Vicky, I’m a UX designer with a background in architecture, currently designing for business
-                and consumer-facing websites with a small team [https://vickywang.me/worksamples/xiaobaoii]</p>
-              <p> At BYP, I am currently leading the design of all major features and flows. This includes building
-                support for appointment booking, team management, service management, promotions, and more. I work
-                closely with engineering and management on all phases of the design process.
-                Before I join my current company, I built and updated my website [https://vickywang.me] myself from
-                scratch by using HTML/CSS/JS, and deployed it on AWS.</p>
-              <p>
-                I am very interested in transforming the physical flow into digital screens, from the customer journey
-                to the information architecture to the real site map. I enjoy structuring requirements and delivering a
-                simple and scalable product.
-                Looking forward to hearing from you.</p>
-              <p> Thanks,</p>
+              <p>My name is Vicky, and I am a UX designer with experience designing both business-facing web
+                applications and consumer-oriented mobile apps. I invite you to view some of my work on our B2B web app
+                at
+                [https://vickywang.me/worksamples/xiaobaobeeii/].</p>
+              <p>At BookYourPet, where I have been an integral team member for the past two years, our mission is to
+                offer pet business owners an efficient tool for managing their operations. Our platform aims to
+                streamline appointment management processes, with key features that include team member shift
+                management, service availability tracking, and payment facilitation, among others. While several
+                features were in place before I joined BYP, the iteration of the platform is continuously shaped by
+                pre-existing elements and legacy factors. Collaborating closely with both the engineering and product
+                manager, I am involved in every phase of the design process.</p>
+              <p>Prior to my tenure at BYP, I took on the challenge of designing, building, and maintaining my personal
+                website [https://vickywang.me]. This was a comprehensive project, as I coded it from scratch using
+                HTML/CSS/JS and hosted it on AWS. I also developed a responsive and scalable design system for the
+                site[https://vickywang.me/design_system/].</p>
+              <p>My background further extends to architectural design. Before my transition into the UX realm, I was
+                part of a competition-focused architectural design team, concentrating mainly on the initial stages of
+                conceptual design.</p>
+              <p>What truly excites me in my profession is the opportunity to transform physical workflows into
+                interactive digital interfaces. This entails converting the customer journey into structured digital
+                screens – from information architecture to the final site map. I am passionate about dissecting
+                requirements and crafting simple, scalable solutions that address user needs.</p>
+              <p>I eagerly anticipate the chance to discuss how my experience and skills align with your team's needs.
+                Thank you for considering my application.</p>
+
+              <p>Best,</p>
               <p>Vicky</p>
+
+              <div class="blankHXS"></div>
             </button>
           </div>
         </div>
