--- a/design_system/index.html
+++ b/design_system/index.html
@@ -334,14 +334,15 @@
   <!-- LRcarousel-->
   <main>
     <div class="blankHS"></div>
+
+
     <div class="Grid Grid--full u-textCenter">
       <div class="Grid-cell">
-        <h1 class="Grid Grid--center"> <span class="specialTextL Grey300">Design System Breakdown</span>
+        <h1 class="Grid Grid--center"> <span class="specialTextL">Design System Breakdown</span><img class="moveUpDown widthLogo"
+            src="../icon/arrow-down.svg" alt="Scroll down">
         </h1>
       </div>
     </div>
-
-
 
 
     <nav class="section-nav">
@@ -3908,7 +3909,6 @@
   <!--footer-->
   <footer class="GreyBg100">
     <div class="blankHM"></div>
-
     <div class="Grid Grid--gutters Grid--cols-2 wrapper Grid--center">
       <div class="Grid-cell">
         <div class="element">
@@ -3947,20 +3947,14 @@
                 title="Instagram">
             </a>
           </div>
-
         </div>
-
-
       </div>
     </div>
-
     <div class="blankHM"></div>
-
     <div class="blankPhone"></div>
-
+  <!--footer-->
 
   </footer>
-  <!--footer-->
 
 
 </body>
