--- a/glorify/index.html
+++ b/glorify/index.html
@@ -1117,7 +1117,7 @@
           <div class="Grid Grid--gutters Grid--cols-2">
             <div class="Grid-cell">
               <div class="element ">
-                <h3 class="centerVer"> <img class="iconS" src="IconIdea.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> Finding 1 - the motivation</strong>
                 </h3>
                 <h4><strong>The participants expressed a range of preferences when it comes to worship styles and
@@ -1138,7 +1138,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <h3 class="centerVer"> <img class="iconS" src="IconIdea.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> Finding 2 - the purpose</strong>
                 </h3>
                 <h4><strong>Participants tend to attend <span class="textDecor GLORIFY">small group events more
@@ -1158,7 +1158,7 @@
             <div class="Grid-cell">
               <div class="element ">
 
-                <h3 class="centerVer"> <img class="iconS" src="IconIdea.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> Finding 3 - the difference</strong>
                 </h3>
                 <h4><strong>Older participants often gravitate towards contemplative and introspective worship, while
@@ -1174,7 +1174,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <h3 class="centerVer"> <img class="iconS" src="IconIdea.svg" alt="Design">
+                <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
                   <strong class="colorGLORIFYOrange"> Finding 4 - the challenge</strong>
                 </h3>
                 <h4><strong>Participants in group worship often face challenges, especially when it comes to navigating
@@ -1515,17 +1515,15 @@
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
-                <p class="specialTextNote colorGLORIFYBlue u-textCenter">After the brainstorming session, I worked to
-                  pinpoint the most crucial functionality for the community's initial version.</p>
+                <p class="specialTextNote colorGLORIFYBlue u-textCenter">Essential features for the community's
+                  inaugural version include improved user profiles, tools for connecting with others, and options for
+                  sharing Bible study notes. While these are fundamental, they might not be the most exhilarating
+                  aspects.</p>
 
-                <p class="specialTextNote colorGLORIFYBlue u-textCenter">Based on the four categories, the idea of a
+                <p class="specialTextNote colorGLORIFYBlue u-textCenter">The idea of a
                   local community is not feasible because it's challenging to establish and the current platform isn't
                   designed as a locally-focused mobile app</p>
-                <p class="specialTextNote colorGLORIFYBlue u-textCenter"> The most rational functionalities to
-                  prioritize are foundational features that underpin the community. This includes enhancing user
-                  profiles, providing ways to connect with other users, and facilitating the sharing of Bible study
-                  notes. While these are essential, they may lack a certain excitement factor.
-                </p>
+
                 <p class="specialTextNote colorGLORIFYBlue u-textCenter">
                   Striking a balance between features that bring delight and are deeply cherished, I've decided to
                   develop functionalities for Bible study group worship and prayer-focused group worship, especially
@@ -1539,7 +1537,8 @@
             <div class="Grid Grid--full">
               <div class="Grid-cell">
                 <div class="element">
-                  <h4> <strong> Group Worship Through the App&#58; </strong> </h4>
+
+                  <h3> <strong> Group Worship Through the App&#58; </strong> </h3>
                   <p>Group worship within the app, <span class="textDecor GLORIFY">group prayer and Bible study</span>,
                     emerges as a top design choice, highlighting user engagement and community growth.</p>
                 </div>
@@ -1548,7 +1547,9 @@
             <div class="Grid Grid--gutters Grid--cols-2">
               <div class="Grid-cell">
                 <div class="element">
-                  <h5> <strong> Deepened Community Interaction&#58; </strong></h5>
+                  <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
+                    <strong class="colorGLORIFYOrange"> Deepened Community Interaction&#58; </strong>
+                  </h3>
                   <p>While the 'Most Rational' category establishes connections and the 'Most Delightful' enhances
                     discovery, the 'Darling' idea of group worship delves deeper into facilitating spiritual communion
                     among users. It's an experience that can bind the community closer than shared notes or music.</p>
@@ -1556,7 +1557,9 @@
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <h5> <strong> Unique Offering:&#58; </strong></h5>
+                  <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
+                    <strong class="colorGLORIFYOrange"> Unique Offering:&#58; </strong>
+                  </h3>
                   <P> While many apps might facilitate sharing of notes, music, or journals, a space designed
                     specifically for group prayer/Bible study is a rarer commodity, giving our platform a distinct edge.
                   </P>
@@ -1566,7 +1569,9 @@
             <div class="Grid Grid--gutters Grid--cols-2">
               <div class="Grid-cell">
                 <div class="element">
-                  <h5> <strong> Balanced Approach&#58; </strong></h5>
+                  <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
+                    <strong class="colorGLORIFYOrange">Balanced Approach&#58; </strong>
+                  </h3>
                   <p>Being from the 'Darling' category, it strikes a balance between innovation and feasibility. It's a
                     feature that's both daring and realistic, allowing us to explore new territories without straying
                     too far from known grounds.</p>
@@ -1574,7 +1579,9 @@
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <h5> <strong> Future Scalability:&#58; </strong></h5>
+                  <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
+                    <strong class="colorGLORIFYOrange">Future Scalability:&#58; </strong>
+                  </h3>
                   <P> Once a robust system for group worship/Bible study is established, it can be further expanded or
                     refined, integrating elements from other categories. For instance, shared worship statistics from
                     the 'Most Rational' category can be integrated to provide insights into group prayer sessions.
@@ -1721,14 +1728,13 @@
                   <h3> <strong> Concept A - Facilitating a Bible Study Session </strong> </h3>
                   <h4> <strong> Tasks for Participants:</strong> </h4>
                   <ul>
-                    <li class="listCircle">Create a group prayer room</li>
                     <li class="listCircle"> <span class="textDecor GLORIFY">Discover a group prayer</span> that align
                       with their interests </li>
                     <li class="listCircle">Find a suitable group prayer to participate in </li>
                     <li class="listCircle"><span class="textDecor GLORIFY">Engage in prayer</span> with other
                       fellowships within the room </li>
-                    <li class="listCircle"><span class="textDecor GLORIFY">Foster connections with other
-                        fellowships</span> after the group prayer session
+                    <li class="listCircle"><span class="textDecor GLORIFY">Foster connections</span> with other
+                      fellowships after the group prayer session
                     </li>
 
                   </ul>
@@ -1739,14 +1745,13 @@
 
                   <h4> <strong> Tasks for Participants:</strong> </h4>
                   <ul>
-                    <li class="listCircle">Create a Bible study room</li>
                     <li class="listCircle"> <span class="textDecor GLORIFY">Discover topics</span> that align with their
                       interests</li>
                     <li class="listCircle">Find a Bible study session to join</li>
                     <li class="listCircle"><span class="textDecor GLORIFY">Engage in discussions</span> with other
                       fellowships within the room</li>
-                    <li class="listCircle"><span class="textDecor GLORIFY">Foster connections with other
-                        fellowships</span> after the Bible study session</li>
+                    <li class="listCircle"><span class="textDecor GLORIFY">Foster connections</span>  with other
+                      fellowships after the Bible study session</li>
 
                   </ul>
 
@@ -2043,8 +2048,9 @@
           <div class="Grid Grid--gutters Grid--cols-3">
             <div class="Grid-cell">
               <div class="element">
-                <h4> <strong>Group prayer</strong> </h4>
-
+                <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange"> Group prayer</strong>
+                </h3>
                 <ul>
                   <li>Will integrated into current prayer feature</li>
                   <li>Enable <span class="textDecor GLORIFY">create</span> group prayer</li>
@@ -2055,7 +2061,9 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <h4> <strong> Chat </strong> </h4>
+                <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange"> Chat</strong>
+                </h3>
                 <ul>
                   <li>Adding a new icon into top navigation</li>
                   <li>Able to see the <span class="textDecor GLORIFY">notification</span> anytime</li>
@@ -2068,7 +2076,9 @@
             </div>
             <div class="Grid-cell">
               <div class="element ">
-                <h4> <strong> Fellowship</strong> </h4>
+                <h3 class="centerVer"> <img class="iconS paddingXS" src="IconIdea.svg" alt="Design">
+                  <strong class="colorGLORIFYOrange"> Fellowship</strong>
+                </h3>
                 <ul>
                   <li>Adding a new "add/remove" icon to the existing fellowship page</li>
                   <li>Adding a new "message" icon to the each fellowship</li>
